# wasm-ray

./: .gitignore  0.bootstrap.js  Cargo.toml  Makefile  README.md  bootstrap.js  index.html
.github/workflows/: main.yml
src/: aabb.rs  camera.rs  im.rs  image.rs  lib.rs  main.rs  material.rs  ray.rs  utils.rs  vec3.rs  wobject.rs
www/: index.html  index.js  package-lock.json  package.json
