[package]
name = "wasm-ray"
version = "0.1.0"
authors = ["Ashley Anderson <aanderson@hyperfine-research.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "0.8.3", features = ["getrandom", "small_rng"] }
getrandom = { version = "0.2", features = ["js"] }

itertools = "0.10.0"

# dependencies for CLI version
clap = "2.33.3"
rayon = "1.5.0"
image = "0.23.14"
